# introduction-to-wasi

./: README.md  index.md
hello-world/: Cargo.toml  README.md
http_request/: Cargo.toml
http_request_waki/: Cargo.toml  Justfile
http_request_waki/src/: main.rs
http_request_wasi/: Cargo.toml  Justfile
http_request_wasi/src/: main.rs
http_request_witbindgen/: Cargo.toml  Justfile  README.md  wit-download.sh
http_request_witbindgen/src/: bindings.rs  lib.rs
http_request_witbindgen/wit/: world.wit
http_service/: Cargo.toml  Justfile  README.md
http_service/src/: lib.rs
